ontol/ontol-compiler/test-cases/error/lexer/recovery.on
def foo (
    rel .'prop': text
)
def bar (
    rel .'prop': integer
)
map(
    foo(
        'prop': x
    ),
    bar(
        'prop':
            x
            ;; // ERROR lex error: illegal characters `;;`
            foobar // ERROR parse error: found `foobar`, expected one of `)`, `*`, `+`, `,`, `-`, `/`
    )
)
